<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Sohbet</string>
    <string name="app_name_stable" translatable="false">Chat</string>
    <string name="next">İleri</string>
    <string name="confirm">Onayla</string>
    <string name="confirm_phone_number">Telefon Numarasını Onayla</string>
    <string name="are_you_sure_phone_number">Bu telefon numarasını kullanmak istediğinize emin misiniz?</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
    <string name="change">Değiştir</string>
    <string name="phone_number_can_not_be_empty">Telefon numarası boş olamaz!</string>
    <string name="resend">Tekrar Gönder</string>
    <string name="too_many_requests">Çok fazla istek gönderildi! Lütfen daha sonra tekrar deneyin!</string>
    <string name="something_went_wrong">Bir hata oluştu! Lütfen daha sonra tekrar deneyin!</string>
    <string name="confirmation_code_is_wrong">Onay kodu geçersiz!</string>
    <string name="please_enter_your_phone_number">Lütfen telefon numaranızı girin.</string>
    <string name="please_enter_the_confirmation_code">Lütfen kısa süre içinde size gönderilecek olan onay kodunu girin.</string>
    <string name="name">İsim</string>
    <string name="about_me">Hakkımda</string>
    <string name="done">Bitti</string>
    <string name="name_cannot_be_empty">İsim boş olamaz!</string>
    <string name="permission_denied">İzin Reddedildi</string>
    <string name="you_must_grant_required_permissions">Bu işlemin gerçekleştirilebilmesi için gerekli izinleri vermelisin. Eğer bu hatayı izin kutusu çıkmadan görüyorsan lütfen uygulama verilerini temizlemeyi dene.</string>
    <string name="grant">İzin Ver</string>
    <string name="quit">Çıkış</string>
    <string name="dismiss">Kapat</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="remove">Kaldır</string>
    <string name="crop_profile_photo">Profil Fotoğrafını Kırp</string>
    <string name="upload_in_progress">Şuanda bir yükleme işlemi mevcut.</string>
    <string name="uploading">Yükleniyor</string>
    <string name="no_image_selected">Resim Seçilmedi</string>
    <string name="failed">Başarısız!</string>
    <string name="could_not_connect_to_database">Veritabanına bağlanılamadı. Lütfen daha sonra tekrar deneyin!</string>
    <string name="messages">Mesajlar</string>
    <string name="contacts">Kişiler</string>
    <string name="type_a_message">Bir mesaj yazın…</string>
    <string name="online">Çevrimiçi</string>
    <string name="offline">Çevrimdışı</string>
    <string name="seen">Görüldü</string>
    <string name="sending">İletiliyor</string>
    <string name="sent">İletildi</string>
    <string name="today">Bugün</string>
    <string name="yesterday">Dün</string>
    <string name="delete">Sil</string>
    <string name="show_message">Mesajı Görüntüle</string>
    <string name="archive">Arşivle</string>
    <string name="archive_title">Arşiv</string>
    <string name="delete_messages">Mesajları Sil</string>
    <string name="are_you_sure_you_want_to_delete_messages">Mesajları silmek istediğine emin misin? Bu eylem geri alınamaz.</string>
    <string name="messages_could_not_be_deleted">Mesajlar silinemedi! Lütfen daha sonra tekrar deneyin.</string>
    <string name="archive_messages">Mesajları arşivle</string>
    <string name="are_you_sure_you_want_to_archive_messages">Mesajları arşivlemek istediğine emin misin?\n(Yeni mesajlar dahil edilmeyecek)</string>
    <string name="messages_could_not_be_arhived">Mesajlar arşivlenemedi! Lütfen daha sonra tekrar deneyin.</string>
    <string name="you_cannot_send_messages_in_the_archive">Arşivde mesaj gönderemezsin!</string>
    <string name="messages_is_archiving">Mesajlar arşivleniyor</string>
    <string name="messages_is_deleting">Mesajlar siliniyor</string>
    <string name="s_new_messages">%s Yeni Mesaj</string>
    <string name="new_message">Yeni Mesaj</string>
    <string name="failed_to_fetch_messages">Mesajlar Alınamadı!</string>
    <string name="this_message_could_not_be_decrypted">Bu mesaj çözülemedi!</string>
    <string name="send">Gonder</string>
    <string name="you_cannot_send_empty_messages">Boş mesaj gönderemezsin!</string>
    <string name="there_is_already_an_archiving_or_deleting_progress">Şuanda bir silme ya da arşivleme işlemi mevcut.</string>
    <string name="archived_messages">Arşivlenmiş Mesajlar</string>
    <string name="are_you_sure_you_want_to_unarchive_messages">Mesajları arşivden çıkarmak istediğine emin misin?</string>
    <string name="messages_is_unarchiving">Mesajlar arşivden çıkarılıyor.</string>
    <string name="there_is_already_an_unarchiving_or_deleting_progress">Şuanda bir silme ya da arşivden çıkarma işlemi mevcut.</string>
    <string name="unarchive">Arşivden Çıkar</string>
    <string name="refresh_contacts">Kişileri Yenile</string>
    <string name="refreshing_contacts">Kişiler yenileniyor…</string>
    <string name="copied_to_clipboard">Panoya kopyalandı.</string>
    <string name="profile_picture">Profil Fotoğrafı</string>
    <string name="settings">Ayarlar</string>
    <string name="profile">Profil</string>
    <string name="phone_number">Telefon Numarası</string>
    <string name="cancel">İptal</string>
    <string name="save">Kaydet</string>
    <string name="cannot_be_empty">Bu kısım boş olamaz!</string>
    <string name="scroll">Kaydır</string>
    <string name="notifications">Bildirimler</string>
    <string name="change_notification_settings">Bildirim ayarlarını değiştir</string>
    <string name="show_notifications">Bildirimleri Göster</string>
    <string name="ignores_all_options_below_if_disabled">Devredışıysa alttaki tüm ayarları yoksayar</string>
    <string name="sounds">Sesler</string>
    <string name="enables_notification_sounds">Bildirim seslerini etkinleştirir</string>
    <string name="show_on_screen">Ekranda Göster</string>
    <string name="shows_notifications_at_the_top_of_the_screen_when_the_screen_is_on">Ekran açıkken bildirimleri ekranın üstünde gösterir</string>
    <string name="vibration">Titreşim</string>
    <string name="default1">Varsayılan</string>
    <string name="long1">Uzun</string>
    <string name="short1">Kısa</string>
    <string name="none">Hiçbiri</string>
    <string name="white">Beyaz</string>
    <string name="red">Kırmızı</string>
    <string name="yellow">Sarı</string>
    <string name="green">Yeşil</string>
    <string name="cyan">Camgöbeği</string>
    <string name="blue">Mavi</string>
    <string name="light">Işık</string>
    <string name="notification_tone">Bildirim Sesi</string>
    <string name="more">Daha Fazla</string>
    <string name="test_notification1">Bildirimi Test Et 1</string>
    <string name="test_notification2">Bildirimi Test Et 2</string>
    <string name="photo">Fotoğraf</string>
    <string name="video">Video</string>
    <string name="file">Dosya</string>
    <string name="send_media">Dosya Gönder</string>
    <string name="could_not_take_a_photo">Fotoğraf çekilemedi. Daha sonra tekrar deneyin.</string>
    <string name="could_not_send_image">Fotoğraf gönderilemedi!</string>
    <string name="could_not_update_profile_photo">Profil resmi güncellenemedi!</string>
    <string name="sending_media">Medya gönderiliyor</string>
    <string name="flash">Flash</string>
    <string name="you_must_grant_file_permission">Bu işlem için dosya izni vermelisiniz!</string>
    <string name="send_s">Gönder: %s</string>
    <string name="image">Resim</string>
    <string name="image_not_found">Resim bulunamadı.</string>
    <string name="image_could_not_open">Resim açılamadı.</string>
    <string name="you_must_grant_contact_permission">Bu işlem için kişi izni vermelisiniz!</string>
</resources>