<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Giris.BilgilerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="50dp"
        android:paddingEnd="50dp">

        <include layout="@layout/item_profil_resmi"/>

        <EditText
            android:id="@+id/isimET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences"
            android:maxLength="20"
            android:maxLines="1"
            android:textSize="20sp"
            android:theme="@style/EditTextThemeDefault" />

        <TextView
            android:id="@+id/isimHata"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/name_cannot_be_empty"
            android:textColor="@color/warningColor"
            android:textSize="20sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/hakkimdaET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/about_me"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            android:maxLength="100"
            android:maxLines="5"
            android:minHeight="50dp"
            android:textSize="20sp"
            android:theme="@style/EditTextThemeDefault" />

        <Button
            android:id="@+id/bitirBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corners_15"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/done"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>