<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/altMenuLayout"
    android:background="@drawable/alt_menu_arkaplan"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center">
        <ImageView
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:src="@drawable/ic_baseline_drag_handle_24"/>
    </LinearLayout>
    <TextView
        android:id="@+id/mesajiGoruntule"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text="@string/show_message"/>
    <TextView
        android:id="@+id/mesajiArsivle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text="@string/archive"/>
    <TextView
        android:id="@+id/mesajiSil"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text="@string/delete"/>
</LinearLayout>