<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Ayarlar.BildirimActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/MenuStil">
            <TextView
                android:id="@+id/baslik"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="8dp"
                android:textColor="#fff"
                android:textStyle="bold"
                android:text="@string/notifications"
                android:textSize="24sp"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/bildirimDurumu"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:text="@string/show_notifications"
                        android:layout_toStartOf="@id/bildirimDurumuSwitch"/>
                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/bildirimDurumuSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:clickable="false"
                        android:checked="true"
                        android:layout_alignParentEnd="true"
                        android:theme="@style/SwitchCompatVarsayilan"/>
                </RelativeLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/ignores_all_options_below_if_disabled"
                    android:textColor="@color/gray"
                    android:textSize="15sp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/bildirimSesi"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:text="@string/sounds"
                        android:layout_toStartOf="@id/bildirimSesiSwitch"/>
                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/bildirimSesiSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:clickable="false"
                        android:layout_alignParentEnd="true"
                        android:theme="@style/SwitchCompatVarsayilan"/>
                </RelativeLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/enables_notification_sounds"
                    android:textColor="@color/gray"
                    android:textSize="15sp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>