<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/altMenuLayout"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/photoLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true"
        tools:ignore="UselessParent">
        <LinearLayout
            android:id="@+id/kameraAc"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:orientation="vertical"
            android:padding="10dp"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:layout_gravity="center"
                android:background="@drawable/yuvarlak_arkaplan_yesil"
                android:src="@drawable/ic_baseline_photo_camera_24"
                android:contentDescription="@string/camera" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:textAlignment="center"
                android:text="@string/camera"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/resimGaleri"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:orientation="vertical"
            android:padding="10dp"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:layout_gravity="center"
                android:background="@drawable/yuvarlak_arkaplan_mor"
                android:src="@drawable/ic_baseline_image_24"
                android:contentDescription="@string/photo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:textAlignment="center"
                android:text="@string/photo"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/videoGaleri"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:orientation="vertical"
            android:padding="10dp"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:layout_gravity="center"
                android:background="@drawable/yuvarlak_arkaplan"
                android:src="@drawable/ic_baseline_videocam_24"
                android:contentDescription="@string/video" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:textAlignment="center"
                android:text="@string/video"
                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>