<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/profilActivity"
    tools:context=".Ayarlar.ProfilActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/MenuStil">
            <TextView
                android:id="@+id/baslik"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="8dp"
                android:textColor="#fff"
                android:textStyle="bold"
                android:text="@string/profile"
                android:textSize="24sp"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:gravity="center_vertical"
        android:orientation="vertical">
        <include layout="@layout/item_profil_resmi"/>
        <RelativeLayout
            android:id="@+id/isimLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <ImageView
                android:id="@+id/isimIkon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:src="@drawable/ic_baseline_person_24"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/isimIkon"
                android:layout_toStartOf="@id/isimDuzenleIkon"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:textSize="15sp"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:text="@string/name"/>
                <TextView
                    android:id="@+id/isimText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"/>
            </LinearLayout>
            <ImageView
                android:id="@+id/isimDuzenleIkon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="5dp"
                android:src="@drawable/ic_baseline_edit_24"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/hakkimdaLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <ImageView
                android:id="@+id/hakkimdaIkon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:src="@drawable/ic_baseline_info_24" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/hakkimdaIkon"
                android:layout_toStartOf="@id/hakkimdaDuzenleIkon"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:textSize="15sp"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:text="@string/about_me"/>
                <TextView
                    android:id="@+id/hakkimdaText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"/>
            </LinearLayout>
            <ImageView
                android:id="@+id/hakkimdaDuzenleIkon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="5dp"
                android:src="@drawable/ic_baseline_edit_24"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/telefonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <ImageView
                android:id="@+id/telefonIkon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:src="@drawable/ic_baseline_phone_24"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/telefonIkon"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:textSize="15sp"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:text="@string/phone_number"/>
                <TextView
                    android:id="@+id/telefonText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>